# Sentiment_Analysis_Video_Games

./: LICENSE  README.md  Reviews_ingestion.ipynb  anno_117_pax_romana_patches.csv  full_review_texts.txt  main.py  pyproject.toml  sentiment_analysis.ipynb  slide_content.docx  slide_content_PL.docx  steam_reviews_3274580.csv
